--- a/css/app.css
+++ b/css/app.css
@@ -990,3 +990,19 @@ max-width: 129px;
 .deposit-page-block.active{
 	display:block;
 }
+
+.payment-system-limit{
+	display:flex;
+	opacity:.7;
+	pointer-events: none;
+	margin-bottom: 20px;
+}
+.payment-system-limit-name{
+	font-size: 12px;
+	color:#fff;
+}
+.payment-system-limit-amount{
+	font-size: 12px;
+	color:#fff;
+	margin-left: auto;
+}
