--- a/css/app.css
+++ b/css/app.css
@@ -943,6 +943,20 @@ max-width: 129px;
     margin-bottom: 12px;
     background: var(--2410b24e);
 }
+
+.withdraw-system-btn{
+	display: block;
+    width: 100%;
+    height: 40px;
+	font-size: 13px;
+	font-weight: 700;
+	cursor: pointer;
+	color:#fff;
+    border-radius: 10px;
+	--2410b24e: linear-gradient(267.95deg, #00a3ff 0%, #0047ff 100%);
+    margin-bottom: 12px;
+    background: var(--2410b24e);
+}
 	
 .deposit-system-icon{
 	width: 17.5px;
@@ -961,7 +975,20 @@ max-width: 129px;
 	padding-left: 15px;
 	margin-bottom: 10px;
 }
-	
+
+.withdraw-system-input{
+	width:100%;
+	display: flex;
+	align-items: center;
+	border-radius: 12px;
+	background: #15192f;
+	color:#fff;
+	font-size: 13px;
+	height: 50px;
+	padding-left: 15px;
+	margin-bottom: 10px;
+}
+
 .deposit-system-item{
 	width:100%;
 	display: flex;
